# ncnn-android-mobilenetssd

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/mobilenetssdncnn/: MainActivity.java  MobilenetSSDNcnn.java
app/src/main/jni/: CMakeLists.txt  mobilenetssdncnn_jni.cpp
app/src/main/res/values/: strings.xml
